Fixes margin and padding on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ html {
   text-size-adjust: 100%;
   font-family: "Crimson Text";
   color: #222;
+  line-height: 1.3;
 }
 
 *, *::before, *::after {
@@ -20,10 +21,14 @@ html {
 
 article {
   max-width: 43em;
+  padding-left: .5rem;
+  padding-right: .5rem;
+  padding-bottom: 1.3rem;
 }
 
 article h1 {
   font-weight: normal;
+  margin-bottom: 0;
 }
 
 article header {
@@ -32,18 +37,29 @@ article header {
 
 article header p {
   font-style: italic;
+  margin-top: 0;
+  margin-bottom: 1.3rem;
 }
 
 article > p:last-child {
   border-bottom: 1px solid #999;
+  padding-bottom: 1.3rem;
+}
+
+article p {
+  margin-top: 1.3rem;
 }
 
 blockquote {
   max-width: 24em;
   color: #555;
   font-size: 1.125rem;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .quote {
   color: #999;
 }
+
+@media (min-width: 38em)
